--- a/interview-assistant/package.json
+++ b/interview-assistant/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
     "marked": "^15.0.11",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
